--- a/src/index.html
+++ b/src/index.html
@@ -61,23 +61,25 @@
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.plus.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.picker.ext.js"></script>
+
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.coptic.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.ethiopian.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.islamic.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.julian.min.js"></script>
     <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.nepali.min.js"></script>
-    <script type="text/javascript" src="assets/library/dhis2/dhis2.util.js"></script>
-    <script type="text/javascript" src="assets/library/dhis2/dhis2.period.js"></script>
+    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
+
+    <script src="assets/library/reportModule.js"></script>
+    <script src="assets/library/dhis2/dhis2.util.js"></script>
+    <script src="assets/library/dhis2/dhis2.period.js"></script>
     <script>
       dhis2.period.calendar = $.calendars.instance('gregorian');
       dhis2.period.generator = new dhis2.period.PeriodGenerator(dhis2.period.calendar, dhis2.period.DEFAULT_DATE_FORMAT);
       dhis2.network = {};
 
     </script>
-    <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
-    <script type="text/javascript" src="assets/library/reportModule.js"></script>
-    <script type="text/javascript" src="assets/library/reportModule.js"></script>
     <script type="text/javascript" src="assets/library/sql-lite-extension.js"></script>
+
   </body>
 
 </html>
