feat(Color setting): Apply color setting on utilities apps as well as shared components

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'About'"></span>
     </ion-title>
@@ -76,13 +94,15 @@
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ dataValuesStorage.online }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  dataValuesStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Not synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ dataValuesStorage.offline }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  dataValuesStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
@@ -90,13 +110,15 @@
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ eventsStorage.online }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{ eventsStorage.online
+                  }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Not synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ eventsStorage.offline }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  eventsStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
@@ -104,13 +126,15 @@
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.online }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  eventsForTrackerStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Not synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ eventsForTrackerStorage.offline }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  eventsForTrackerStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
@@ -118,13 +142,15 @@
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ enrollmentStorage.online }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  enrollmentStorage.online }}</ion-badge>
               </ion-item>
             </div>
             <div class="item-card" color="font-color">
               <ion-item>
                 <span [translate]="'Not synced'"></span>
-                <ion-badge color="icon-color" item-end>{{ enrollmentStorage.offline }}</ion-badge>
+                <ion-badge [color]="(colorSettings$ |async).colorAttributes.secondary" item-end>{{
+                  enrollmentStorage.offline }}</ion-badge>
               </ion-item>
             </div>
           </div>
