--- a/src/pages/coordinate-modal/coordinate-modal.html
+++ b/src/pages/coordinate-modal/coordinate-modal.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-buttons left>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         &nbsp;&nbsp;&nbsp;
