--- a/src/pages/hide-and-show-columns/hide-and-show-columns.html
+++ b/src/pages/hide-and-show-columns/hide-and-show-columns.html
@@ -1,11 +1,29 @@
 <!--
-  Generated template for the HideAndShowColumnsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-buttons left>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         &nbsp;&nbsp;&nbsp;
@@ -30,23 +48,23 @@
         <ion-col>
           <div class="animated fadeIn">
             <div>
-              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.all" />&nbsp;&nbsp;
                 <span [translate]="'All'"></span>
               </div>
-              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.none" />&nbsp;&nbsp;
                 <span [translate]="'None'"></span>
               </div>
-              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
-                text-center text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <ion-icon name="refresh"></ion-icon>&nbsp;&nbsp;
                 <span [translate]="'Reset'"></span>
               </div>
-              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button
+                clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
                 <span [translate]="'Done'"></span>
               </div>
@@ -56,28 +74,28 @@
               <div class="item-card">
                 <ion-item no-lines *ngFor="let field of fieldsToDisplay;trackBy: trackByFn">
                   <ion-label>{{ field.name }}</ion-label>
-                  <ion-checkbox [(ngModel)]="selectedItemsModel[field.id]"></ion-checkbox>
+                  <ion-checkbox [color]="(colorSettings$ |async).colorAttributes.secondary" [(ngModel)]="selectedItemsModel[field.id]"></ion-checkbox>
                 </ion-item>
               </div>
             </div>
             <div>
-              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('All')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.all" />&nbsp;&nbsp;
                 <span [translate]="'All'"></span>
               </div>
-              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('None')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.none" />&nbsp;&nbsp;
                 <span [translate]="'None'"></span>
               </div>
-              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom ion-button clear
-                text-center text-capitalize icon-start>
+              <div class="item-card" (click)="updateSelection('Reset')" color="font-color" padding-top padding-bottom
+                ion-button clear text-center text-capitalize icon-start>
                 <ion-icon name="refresh"></ion-icon>&nbsp;&nbsp;
                 <span [translate]="'Reset'"></span>
               </div>
-              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button clear text-center
-                text-capitalize icon-start>
+              <div class="item-card" (click)="saveChanges()" color="font-color" padding-top padding-bottom ion-button
+                clear text-center text-capitalize icon-start>
                 <img class="side-menu-icon" [src]="icons.done" />&nbsp;&nbsp;
                 <span [translate]="'Done'"></span>
               </div>
