--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'Profile'"></span>
     </ion-title>
@@ -51,8 +69,9 @@
               </div>
               <div *ngIf="profileContent.id == 'accountSetting'">
                 <profile-password (onUpdateUserPassword)="updateUserPassword($event)" (onChangePasswordFormField)="passwordFormFieldUpdate($event)"
-                  [isPasswordFormValid]="isPasswordFormValid" [isUserPasswordUpdateProcessActive]="isUserPasswordUpdateProcessActive"
-                  [barcodeSettings]="barcodeSettings" [dataEntrySettings]="dataEntrySettings" [currentUser]="currentUser"></profile-password>
+                  [colorSettings]="colorSettings$ |async" [isPasswordFormValid]="isPasswordFormValid"
+                  [isUserPasswordUpdateProcessActive]="isUserPasswordUpdateProcessActive" [barcodeSettings]="barcodeSettings"
+                  [dataEntrySettings]="dataEntrySettings" [currentUser]="currentUser"></profile-password>
               </div>
               <div *ngIf="userData && userData[profileContent.id]">
                 <div *ngIf="profileContent.id == 'orgUnits' ||profileContent.id == 'roles' || profileContent.id == 'program' || profileContent.id == 'form'">
