--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the SyncPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'Sync'"></span>
     </ion-title>
@@ -34,27 +52,27 @@
       <div *ngIf="(isSyncContentOpen[syncContent.id])">
         <hr>
         <div *ngIf="syncContent.id == 'dataViaSms'">
-          <upload-data-via-sms></upload-data-via-sms>
+          <upload-data-via-sms [colorSettings]="colorSettings$ |async"></upload-data-via-sms>
         </div>
 
         <div *ngIf="syncContent.id == 'dataViaInternet'">
-          <upload-data-via-internet></upload-data-via-internet>
+          <upload-data-via-internet [colorSettings]="colorSettings$ |async"></upload-data-via-internet>
         </div>
 
         <div *ngIf="syncContent.id == 'downloadMetadata'">
-          <download-meta-data></download-meta-data>
+          <download-meta-data [colorSettings]="colorSettings$ |async"></download-meta-data>
         </div>
 
         <div *ngIf="syncContent.id == 'downloadData'">
-          <download-data></download-data>
+          <download-data [colorSettings]="colorSettings$ |async"></download-data>
         </div>
 
         <div *ngIf="syncContent.id == 'clearData'">
-          <clear-local-data></clear-local-data>
+          <clear-local-data [colorSettings]="colorSettings$ |async"></clear-local-data>
         </div>
 
         <div *ngIf="syncContent.id == 'clearMetadata'">
-          <clear-local-metadata></clear-local-metadata>
+          <clear-local-metadata [colorSettings]="colorSettings$ |async"></clear-local-metadata>
         </div>
 
       </div>
