--- a/src/pages/event-capture/event-capture-register/event-capture-register.html
+++ b/src/pages/event-capture/event-capture-register/event-capture-register.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the EventCaptureRegisterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'Event register'"></span>
     </ion-title>
@@ -34,9 +52,9 @@
               <br>
             </div>
             <form>
-              <program-stage-event-based [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout" [programStage]="programStage"
-                [emptyEvent]="emptyEvent" (onCancelEvent)="goBack()" [dataDimension]="dataDimension" [currentEvent]="currentEvent"
-                (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
+              <program-stage-event-based [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout"
+                [programStage]="programStage" [emptyEvent]="emptyEvent" (onCancelEvent)="goBack()" [dataDimension]="dataDimension"
+                [currentEvent]="currentEvent" (onDeleteEvent)="onEventDeleted()"></program-stage-event-based>
             </form>
           </ion-col>
         </ion-row>
