--- a/src/pages/event-capture/event-capture.html
+++ b/src/pages/event-capture/event-capture.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the EventCapturePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'Event capture'"></span>
     </ion-title>
@@ -58,10 +76,12 @@
               <b>
                 <span [translate]="'Not synced'"></span>
               </b> : {{storageStatus.offline }}
-              <span *ngIf="showEventConflictHandler" margin-left>&nbsp;&nbsp;
-                <event-conflict-handler (successEventConflictHandle)="onSuccessEventConflictHandle($event)"
-                  (successDiscovering)="onSuccessDiscoveringEvents($event)" [eventConflictHandler]="eventConflictHandler"></event-conflict-handler>
-              </span>
+
+            </span>
+            <br>
+            <span *ngIf="showEventConflictHandler" margin-left>&nbsp;&nbsp;
+              <event-conflict-handler (successEventConflictHandle)="onSuccessEventConflictHandle($event)"
+                (successDiscovering)="onSuccessDiscoveringEvents($event)" [eventConflictHandler]="eventConflictHandler"></event-conflict-handler>
             </span>
 
           </div>
