feat(Data entry): Applying color theming on data entry module

--- a/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
+++ b/src/pages/data-entry/data-entry-indicators/data-entry-indicators.html
@@ -1,12 +1,30 @@
 <!--
-  Generated template for the DataEntryIndicatorsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
 
-  <ion-toolbar color="primary">
+  <ion-toolbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-buttons left>
       <button class="normalButton" ion-button text-capitalize full large (tap)="dismiss()">
         &nbsp;&nbsp;&nbsp;
@@ -29,7 +47,7 @@
             <span [translate]="'Name'"></span>
           </b> : {{ indicator.name }}
           <br>
-          <span *ngIf="indicator.numeratorDescription != ''">
+          <!-- <span *ngIf="indicator.numeratorDescription != ''">
             <b>
               <span [translate]="'Numerator Description'"></span>
             </b> : {{ indicator.numeratorDescription }}
@@ -40,7 +58,7 @@
               <span [translate]="'Denominator Description'"></span>
             </b> : {{ indicator.denominatorDescription }}
             <br>
-          </span>
+          </span> -->
           <span>
             <b>
               <span [translate]="'Value'"></span>
