--- a/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
+++ b/src/pages/tracker-capture/tracked-entity-dashboard/tracked-entity-dashboard.html
@@ -1,11 +1,29 @@
 <!--
-  Generated template for the TrackedEntityDashboardPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+*
+* Copyright 2015 HISP Tanzania
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published by
+* the Free Software Foundation; either version 2 of the License, or
+* (at your option) any later version.
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+* MA 02110-1301, USA.
+*
+* @since 2015
+* @author Joseph Chingalo profschingalo@gmail.com>
+*
+*
 -->
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar [color]="(colorSettings$ |async).colorAttributes.main">
     <ion-title>
       <span [translate]="'Tracked entity dashboard'"></span>
     </ion-title>
@@ -70,22 +88,25 @@
                     </b>
                     <hr>
                   </div>
-                  <tracker-registration-form [(errorOrWarningMessage)] = "errorOrWarningMessage" [(hiddenSections)]="hiddenSections" [(hiddenFields)]="hiddenFields" [formLayout]="formLayout"
-                    [dataObject]="dataObject" [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser" [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
+                  <tracker-registration-form [(errorOrWarningMessage)]="errorOrWarningMessage" [(hiddenSections)]="hiddenSections"
+                    [(hiddenFields)]="hiddenFields" [formLayout]="formLayout" [dataObject]="dataObject"
+                    [dataUpdateStatus]="dataUpdateStatus$ | async" [currentUser]="currentUser"
+                    [(trackedEntityAttributesSavingStatusClass)]="trackedEntityAttributesSavingStatusClass"
                     [trackerRegistrationForm]="trackerRegistrationForm" [programTrackedEntityAttributes]="programTrackedEntityAttributes"
                     (onChange)="updateData($event,false)"></tracker-registration-form>
                   <div no-padding>
                     <ion-row no-padding no-margin>
                       <ion-col>
                         <div float-left>
-                          <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear text-center text-capitalize>
+                          <div class="item-card" color="font-color" (click)="goBack()" padding ion-button clear
+                            text-center text-capitalize>
                             <ion-icon name="ios-arrow-back-outline"></ion-icon>&nbsp;&nbsp;
                             <span [translate]="'Back'"></span>
                           </div>
                         </div>
                         <div float-right>
-                          <div class="item-card" color="danger" (click)="deleteTrackedEntity(trackedEntityInstance.id)" padding ion-button clear text-center
-                            text-capitalize>
+                          <div class="item-card" color="danger" (click)="deleteTrackedEntity(trackedEntityInstance.id)"
+                            padding ion-button clear text-center text-capitalize>
                             <span [translate]="'Delete'"></span>&nbsp;&nbsp;
                             <ion-icon name="trash"></ion-icon>
                           </div>
@@ -95,8 +116,8 @@
                   </div>
                 </div>
                 <div class="item-card-program-stage-section">
-                  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex +1)" padding ion-button clear
-                    text-center text-capitalize>
+                  <div class="item-card" color="font-color" (click)="updateWidgetPagination(currentWidgetIndex +1)"
+                    padding ion-button clear text-center text-capitalize>
                     <span [translate]="'Next'"></span>&nbsp;&nbsp;
                     <ion-icon name="ios-arrow-forward-outline"></ion-icon>
                   </div>
@@ -108,8 +129,9 @@
                   <div *ngFor="let programStage of programStages;trackBy: trackByFn">
                     <div *ngIf="widget.id == programStage.id">
                       <form>
-                        <program-stage-tracker-based [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout" [programStage]="programStage"
-                          [trackedEntityInstance]="trackedEntityInstance.id" [currentWidgetIndex]="currentWidgetIndex" [isLastStage]="(currentWidgetIndex == programStages.length)"
+                        <program-stage-tracker-based [programSkipLogicMetadata]="programSkipLogicMetadata" [formLayout]="formLayout"
+                          [programStage]="programStage" [trackedEntityInstance]="trackedEntityInstance.id"
+                          [currentWidgetIndex]="currentWidgetIndex" [isLastStage]="(currentWidgetIndex == programStages.length)"
                           (onChange)="updateWidgetPagination($event)"></program-stage-tracker-based>
                       </form>
                     </div>
@@ -128,8 +150,8 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button padding ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets;trackBy: trackByFn" [disabled]="(isDashboardWidgetOpen[widget.id])"
-            (tap)="changeDashboardWidget(widget)">
+          <button padding ion-button clear text-capitalize *ngFor="let widget of dashboardWidgets;trackBy: trackByFn"
+            [disabled]="(isDashboardWidgetOpen[widget.id])" (tap)="changeDashboardWidget(widget)">
             <div [ngClass]=" (isDashboardWidgetOpen[widget.id])?'program-stage-button-label':''">
               <div *ngIf="widget.icon">
                 <img class="footer-icon" [src]="widget.icon" />
