fix(Custome forms): Select and percentage inputs
Fixing rendering of percentage as well as select inputs

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 
     <!-- add leaflet css from copied assets -->
     <link href="assets/leaflet.css" rel="stylesheet">
+    <link href="assets/style.css" rel="stylesheet">
 
     <!--add css for jquery ui-->
     <link href="assets/library/jquery-ui/jquery-ui.min.css" rel="stylesheet">
