feat(Aggregate extension): Adding support fetching aggregate metadata and data values for js functio

--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,7 @@
 
     </script>
     <script type="text/javascript" src="assets/library/sql-lite-extension.js"></script>
+    <script type="text/javascript" src="assets/library/aggregate-data-extension.js"></script>
 
   </body>
 
