--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
     </script>
     <script type="text/javascript" src="assets/library/sql-lite-extension.js"></script>
     <script type="text/javascript" src="assets/library/aggregate-data-extension.js"></script>
-
+    <script type="text/javascript" src="assets/library/case-based-extension.js"></script>
   </body>
 
 </html>
